EnvoyPractice/Envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/r"
                route:
                  prefix_rewrite: "/reservation"
                  cluster: reservation_service
              - match:
                  prefix: "/e"
                route:
                  prefix_rewrite: "/email"
                  cluster: email_service
              

  clusters:
  - name: reservation_service
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: reservation_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: firstapi
                port_value: 80
  - name: email_service
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: email_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: seconcdapi
                port_value: 80
